[WA-707] Scrollbar fix

--- a/docroot/themes/custom/wateraid/sass/5-components/_form.scss
+++ b/docroot/themes/custom/wateraid/sass/5-components/_form.scss
@@ -711,6 +711,7 @@ fieldset.next-form-step {
   .pca {
     .pcaautocomplete {
       border: none !important;
+      max-width: 100%;
     }
     .pcaitem {
       display: flex;
